# tensorflow-word2vec

./: stack.yaml  tensorflow-word2vec.cabal
app/: Main.hs
src/TensorFlow/Examples/Word2Vec/: Parse.hs
