name:                tensorflow-word2vec
version:             0.1.0.0
synopsis:            TensorFlow demo application for learning Word2Vec model.
description:         Please see README.md
homepage:            https://github.com/dp-cylme/tensorflow-word2vec#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           Copyright: (c) 2016 Danil Petrov
category:            Machine Learning
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TensorFlow.Examples.Word2Vec.Parse
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , path
                     , zip
  default-language:    Haskell2010

executable tensorflow-word2vec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5
                     , bytestring >= 0.10
                     , tensorflow-word2vec-input-data
                     , tensorflow-word2vec
  default-language:    Haskell2010

test-suite tensorflow-word2vec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tensorflow-word2vec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/tensorflow-word2vec
